--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,4 @@
 steps:
-- name: "gcr.io/cloud-builders/gcloud"
-  args: ["app", "deploy"]
+- name: "gcr.io/cloud-builders/npm"
+  args: ["run", "deploy"]
 timeout: "1600s"
