--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rimraf": "^2.6.3"
   },
   "dependencies": {
+    "@google-cloud/firestore": "^1.3.0",
     "axios": "^0.18.0",
     "discord.js": "^11.4.2",
     "dotenv": "^7.0.0",
