Increase frequency of loot drops to 7.25%, add delay to loot messages

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 COMMAND_PREFIX=!
+STAGING_GUILD=336585541380341770
 DISCORD_TOKEN=Mzg3NzQ4NTY4NjE1ODc4NjU3.XLu7KA.1i5BGT4WNCPkVjGNJt-NirkHQ38
 
 DISCORD_TOKEN_TESTBOT=Mzg3NzQ4NTY4NjE1ODc4NjU3.XLu7KA.1i5BGT4WNCPkVjGNJt-NirkHQ38
