--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@google-cloud/firestore": "^1.3.0",
     "axios": "^0.18.0",
+    "dayjs": "^1.8.13",
     "discord.js": "^11.4.2",
     "dotenv": "^7.0.0",
     "mad-libber": "^1.1.0"
