Add basic leaderboard command

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+PROJECT_ID=carbide-legend-238019
+GOOGLE_CREDENTIALS=C:/Users/tziegel/AppData/Roaming/gcloud/credentials/benbot.json
+
 COMMAND_PREFIX=!
 STAGING_GUILD=336585541380341770
 DISCORD_TOKEN=Mzg3NzQ4NTY4NjE1ODc4NjU3.XLu7KA.1i5BGT4WNCPkVjGNJt-NirkHQ38
