--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dayjs": "^1.8.13",
     "discord.js": "^11.4.2",
     "mad-libber": "^1.1.0",
+    "parse-ms": "^2.1.0",
     "yaml": "^1.7.2"
   }
 }
