--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gcp-project": "gcloud config set project carbide-legend-238019",
     "gcp-deploy": "gcloud app deploy --version v1",
     "gcp-config": "npm run gcp-service-account && npm run gcp-account && npm run gcp-project",
-    "deploy": "npm run build && npmy run gcp-config && npm run gcp-deploy",
+    "deploy": "npm run build && npm run gcp-config && npm run gcp-deploy",
     "publish": "npm run deploy"
   },
   "author": "timziegel",
